@@ -70,12 +70,13 @@
 
 #include "local/local.hpp"
 
-#include "logging/flags.hpp"
 #include "logging/logging.hpp"
 
 #include "master/validation.hpp"
 
 #include "messages/messages.hpp"
+
+#include "scheduler/flags.hpp"
 
 using namespace mesos;
 using namespace mesos::internal;
@@ -136,28 +137,17 @@ public:
       const lambda::function<void()>& disconnected,
       const lambda::function<void(const queue<Event>&)>& received,
       const Option<Credential>& _credential,
-      const Option<shared_ptr<MasterDetector>>& _detector)
+      const Option<shared_ptr<MasterDetector>>& _detector,
+      const Flags& _flags)
     : ProcessBase(ID::generate("scheduler")),
       state(DISCONNECTED),
       contentType(_contentType),
       callbacks {connected, disconnected, received},
       credential(_credential),
-      local(false)
+      local(false),
+      flags(_flags)
   {
     GOOGLE_PROTOBUF_VERIFY_VERSION;
-
-    // Load any flags from the environment (we use local::Flags in the
-    // event we run in 'local' mode, since it inherits
-    // logging::Flags). In the future, just as the TODO in
-    // local/main.cpp discusses, we'll probably want a way to load
-    // master::Flags and slave::Flags as well.
-    local::Flags flags;
-
-    Try<flags::Warnings> load = flags.load("MESOS_");
-
-    if (load.isError()) {
-      EXIT(EXIT_FAILURE) << "Failed to load flags: " << load.error();
-    }
 
     // Initialize libprocess (done here since at some point we might
     // want to use flags to initialize libprocess).
@@ -177,11 +167,6 @@ public:
       logging::initialize("mesos", flags);
     } else {
       VLOG(1) << "Disabling initialization of GLOG logging";
-    }
-
-    // Log any flag warnings (after logging is initialized).
-    foreach (const flags::Warning& warning, load->warnings) {
-      LOG(WARNING) << warning.message;
     }
 
     LOG(INFO) << "Version: " << MESOS_VERSION;
@@ -315,12 +300,17 @@ protected:
       .onAny(defer(self(), &MesosProcess::detected, lambda::_1));
   }
 
-  void connect()
+  void connect(const UUID& _connectionId)
   {
+    // It is possible that a new master was detected while we were waiting
+    // to establish a connection with the old master.
+    if (connectionId != _connectionId) {
+      VLOG(1) << "Ignoring connection attempt from stale connection";
+      return;
+    }
+
     CHECK_EQ(DISCONNECTED, state);
     CHECK_SOME(master);
-
-    connectionId = UUID::random();
 
     state = CONNECTING;
 
@@ -470,7 +460,17 @@ protected:
 
       LOG(INFO) << "New master detected at " << upid;
 
-      connect();
+      connectionId = UUID::random();
+
+      // Wait for a random duration between 0 and `flags.connectionDelayMax`
+      // before (re-)connecting with the master.
+      Duration delay = flags.connectionDelayMax * ((double) os::random()
+                       / RAND_MAX);
+
+      VLOG(1) << "Waiting for " << delay << " before initiating a "
+              << "re-(connection) attempt with the master";
+
+      process::delay(delay, self(), &MesosProcess::connect, connectionId.get());
     }
 
     // Keep detecting masters.
@@ -728,6 +728,7 @@ private:
   queue<Event> events;
   Option<::URL> master;
   Option<UUID> streamId;
+  const Flags flags;
 
   // Master detection future.
   process::Future<Option<mesos::MasterInfo>> detection;
@@ -743,6 +744,19 @@ Mesos::Mesos(
     const Option<Credential>& credential,
     const Option<shared_ptr<MasterDetector>>& detector)
 {
+  Flags flags;
+
+  Try<flags::Warnings> load = flags.load("MESOS_");
+
+  if (load.isError()) {
+    EXIT(EXIT_FAILURE) << "Failed to load flags: " << load.error();
+  }
+
+  // Log any flag warnings (after logging is initialized).
+  foreach (const flags::Warning& warning, load->warnings) {
+    LOG(WARNING) << warning.message;
+  }
+
   process = new MesosProcess(
       master,
       contentType,
@@ -750,7 +764,8 @@ Mesos::Mesos(
       disconnected,
       received,
       credential,
-      detector);
+      detector,
+      flags);
 
   spawn(process);
 }
